--- a/api/package.json
+++ b/api/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "@clerk/clerk-sdk-node": "^4.1.5",
     "@redwoodjs/api": "2.2.3",
     "@redwoodjs/graphql-server": "2.2.3"
   }
