--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,8 @@
     ]
   },
   "dependencies": {
+    "@clerk/clerk-react": "^4.0.9",
+    "@redwoodjs/auth": "2.2.3",
     "@redwoodjs/forms": "2.2.3",
     "@redwoodjs/router": "2.2.3",
     "@redwoodjs/web": "2.2.3",
