--- a/api/package.json
+++ b/api/package.json
@@ -6,6 +6,7 @@
     "@clerk/clerk-sdk-node": "^4.1.5",
     "@redwoodjs/api": "2.2.3",
     "@redwoodjs/graphql-server": "2.2.3",
-    "metadata-scraper": "^0.2.60"
+    "metadata-scraper": "^0.2.60",
+    "playwright": "^1.26.0"
   }
 }
